# futuremod-gd

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: build.yml
docs/: frame-perfect-analyzer.md
src/: macro.cpp  main.cpp
